# IMUPoserSystem

./: .gitignore  LICENSE  README.md
IMUNode/bno055_calibration/: CMakeLists.txt  sdkconfig
IMUNode/bno055_calibration/main/: CMakeLists.txt  bno055_calibration.cpp
IMUNode/central/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
IMUNode/central/main/: CMakeLists.txt  common_constants.h  gap.cpp  gap.h  gatt.cpp  gatt.h  imu.cpp  imu.h  main.cpp  mqtt.cpp  mqtt.h  nvs_utils.h  udp_client.cpp  udp_client.h  wifi.cpp  wifi.h
IMUNode/common/button/: CMakeLists.txt  button.cpp  button.h
IMUNode/common/imu/: CMakeLists.txt  idf_component.yml  imu.cpp  imu.h
IMUNode/common/led/: CMakeLists.txt  led.cpp  led.h
IMUNode/common/nvs_utils/: nvs_utils.c  nvs_utils.h
IMUNode/experiments/: 0_accelerometer_accuracy.py  1_gyroscope_accuracy.py  2_magnetometer_accuracy.py  accel_calibration.py  mag_calibration.py
IMUNode/experiments/raw_measurements_stream/: CMakeLists.txt
IMUNode/experiments/raw_measurements_stream/main/: CMakeLists.txt  raw_measurements_stream.cpp
IMUNode/nvs_store_options/: CMakeLists.txt
IMUNode/nvs_store_options/main/: CMakeLists.txt  nvs_store_options.c  nvs_utils.c
IMUNode/periph/: CMakeLists.txt  sdkconfig
IMUNode/periph/main/: CMakeLists.txt  gap.cpp  gap.h  gatt.cpp  gatt.h  idf_component.yml  imu.cpp  imu.h  main.cpp  nvs_utils.h
Visualizer/: Visualizer.py
